VTK-1166 another fix for spacing between save buttons section

--- a/src/main/resources/web/themes/default/editor.css
+++ b/src/main/resources/web/themes/default/editor.css
@@ -69,7 +69,7 @@ label.resource\.recursive-listing, label.resource\.hide-last-modified, label.res
 
 div.properties {
  clear:both;
- /* margin-bottom: 1em; */ 
+ margin-bottom: .25em;
  height: 1%; /* For IE */
 }
 
